<resources>
    <string name="app_name">Симулятор бомжа</string>

    <string-array name="currency">
        <item>Бутылки</item>
        <item>Рубли</item>
        <item>Евро</item>
        <item>Биткоины</item>
    </string-array>

    <string name="banner0">ca-app-pub-9182384050264940/1840850197</string>
    <string name="firstPrologue">Вы были успешным Бизнесменом, который смеялся над своими конкурентами. Но в итоге ваш бизнес прогорел и единственное, что у вас осталось - это 1000 рублей, пожалуй, последнее ваше довольствие!\nБонус:\n+1000 руб. на старте</string>
    <string name="secondPrologue">Вы были чемпионом по легкой атлетике. Но из-за амнезии, которую получили во время последнего забега, вы потеряли свою жизнь. Даже близкие друзья ушли от вас. И вы решили начать все сначала, сбежав из больницы.\nБонус:\n+20 к макс. запасу здоровья</string>
    <string name="thirdPrologue">Вы были обычным парнем, которых девушки называли романтиками. Но судьба повернулась так, что в будущем вы не сошлись характером со своей супругой, и она все у вас отсудила, оставив только самокат.\nБонус:\nПройдены курсы по езде на самокате,\nбесплатный самокат</string>
    <string name="information">Информация</string>
    <string name="age">Возраст:</string>
    <string name="location">Локация:</string>
    <string name="transport">Транспорт:</string>
    <string name="house">Жильё:</string>
    <string name="friend">Кореш:</string>
    <string name="bottles">Бутылок:</string>
    <string name="rubles">Рублей:</string>
    <string name="euro">Евро:</string>
    <string name="bitcoins">Биткоины:</string>
    <string name="diamonds">Алмазы:</string>
    <string name="save">Сохранить</string>
    <string name="exit">Выйти в меню</string>
    <string name="tipLocation">Продвигайтесь по локациям, чтобы открыть новые возможности</string>
    <string name="location1">Локация</string>
    <string name="now">Текущ.:</string>
    <string name="tipFriend">Кореша помогут вам найти более лучшую работу</string>
    <string name="friend1">Кореш</string>
    <string name="tipHouse">Покупай дома и транспорт, чтобы переходить на новые локации</string>
    <string name="house1">Дом</string>
    <string name="transport1">Транспорт</string>
    <string name="tipFood">Еда важна для поддержания здоровья! Не стоит о ней забывать.</string>
    <string name="legal">Легально</string>
    <string name="tipHealth">Здоровье превыше всего! Чем выше уровень еды, тем быстрее восстанавливается здоровье. Если оно опуститься ниже 0, смерти не миновать! Так же влияет на бодрость</string>
    <string name="illegal">Нелегально</string>
    <string name="tipEnergy">Чем выше уровень здоровья, тем быстрее восстанавливается бодрость. Сильно влияет на эффективность работы</string>
    <string name="tipRate">При обмене валют округление  идет в меньшую сторону!</string>
    <string name="from">из</string>
    <string name="to">в</string>
    <string name="rate">Курс:</string>
    <string name="rate1">Курс</string>
    <string name="_1">1</string>
    <string name="to1">к</string>
    <string name="exchange">Обмен:</string>
    <string name="equally">=</string>
    <string name="count">количество</string>
    <string name="_100">100</string>
    <string name="translate">Перевести</string>
    <string name="translateAll">Перевести все</string>
    <string name="tipJob">Работа - основной заработок в игре. Её эффективность сильно зависит от уровня бодрости. Так же как и все действия делится на легальную и нет. Если работа нелегальна, то есть высоких шанс, что вас поймают. Будьте осторожны!</string>
    <string name="tipVip">Здесь вы можете купить уникальные товары за особую валюту - алмазы. Они могут попадаться, когда вы совершаете какое либо действие. Либо вы можете их получить, посмотрев рекламу (кнопка добавить).</string>
    <string name="diamonds1">Алмазы:</string>
    <string name="add">Добавить</string>
    <string name="vipStore">Vip Магазин</string>
    <string name="tipStudy">Здесь вы можете проходить разные курсы, чтобы открыть корешей, транспорт и т.п. Будьте внимательнее, учеба отнимает еду, здоровье и еду!</string>
    <string name="study">Учёба</string>
    <string name="backslash">/</string>
    <string name="rubles1">руб:</string>
    <string name="euros1">евро:</string>
    <string name="bitcoins1">биткоины:</string>
    <string name="food">Еда</string>
    <string name="health">Здоровье</string>
    <string name="energy">Бодрость</string>
    <string name="job">Работа</string>
    <string name="continueGame">Продолжить игру</string>
    <string name="newGame">Новая игра</string>
    <string name="settings">Настройки</string>
    <string name="showTips">Включить подсказки</string>
    <string name="Exit">Выход</string>
    <string name="ChosePrehistory">Выберите предысторию</string>
    <string name="startSurvival">Начать выживание</string>
</resources>
