<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="36sp" />

            <Button
                android:id="@+id/continueGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continueGame" />

            <Button
                android:id="@+id/newGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newGame" />

            <Button
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings" />

            <LinearLayout
                android:id="@+id/menuSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/turnOnHints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/showTips"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Exit" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>