<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/ChosePrehistory"
        android:textStyle="bold"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7">

        <Button
            android:id="@+id/firstPrologueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:onClick="firstPrologueButtonClickListener"
            android:text="&#8544;" />

        <Button
            android:id="@+id/secondPrologueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="secondPrologueButtonClickListener"
            android:text="&#8545;" />

        <Button
            android:id="@+id/thirdPrologueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="thirdPrologueButtonClickListener"
            android:text="&#8546;" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/prologue0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/firstPrologue"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/prologue1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/secondPrologue"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/prologue2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/thirdPrologue"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/startGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:onClick="startGameClickListener"
        android:text="@string/startSurvival" />

</LinearLayout>